# gloss-pong-game

./: CHANGELOG.md  gloss-pong-game.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.4/: gloss-pong-game-0.1.0.0-inplace.conf  package.cache
src/: Draw.hs  Input.hs  PongGame.hs
