cabal-version:      2.4
name:               gloss-pong-game
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             kindofdev
maintainer:         jose.velasco.home@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  PongGame
                    , Draw
                    , Input

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
                    , gloss
                    , mtl
    hs-source-dirs:   src
    default-language: Haskell2010

executable gloss-pong-game
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0
      , gloss
      , gloss-pong-game

    hs-source-dirs:   app
    default-language: Haskell2010
